Add new images and links

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
  
   <!-- Icon -->
   <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
 
-  <title>Rafael Felix - Resume</title>
+  <title>Rafael Felix - Resumé</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -176,58 +177,68 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
-
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <!-- <ul class="list-inline dev-icons">
+        <ul class="list-inline dev-icons">
+          <h5>Front End</h5>
           <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
+            <a href="https://dev.w3.org/html5/html-author/"><i class="fab fa-html5"></i></a>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
+            <a href="https://devdocs.io/css/"><i class="fab fa-css3-alt"></i></a>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
+            <a href="https://devdocs.io/javascript/"><i class="fab fa-js-square"></i></a>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
+            <a href="https://angular.io/docs"><i class="fab fa-angular"></i></a>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-react"></i>
+            <a href="https://docs.npmjs.com/"><i class="fab fa-npm"></i></a>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
+            <a href="https://ionicframework.com/docs"><i class="icon ion-ionic"></i></a>
+          </li>
+        </ul>
+        <ul class="list-inline dev-icons">
+            <h5>Back End</h5>
+          <li class="list-inline-item">
+            <a href="https://docs.oracle.com/en/java/"><i class="fab fa-java"></i></a>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
+            <a href="https://spring.io/docs">
+              <img src="img/spring-logo.png" alt="Spring" width="80" height="80">
+            </a>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-less"></i>
+            <a href="https://maven.apache.org/guides/">
+              <img src="img/maven-logo.png" alt="Maven" width="140" height="40">
+            </a>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
+            <a href="https://junit.org/junit5/docs/current/user-guide/">
+              <img src="img/junit5-logo.png" alt="jUnit" width="140" height="40">
+            </a>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
+              <a href="https://swagger.io/docs/">
+                <img src="img/Swagger-logo.png" alt="Swagger" width="60" height="60">
+              </a>
           </li>
+        </ul>
+        <ul class="list-inline dev-icons">
+          <h5>Databases</h5>
           <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
+              <a href="https://dev.mysql.com/doc/">
+                <img src="img/mysql-logo.png" alt="MySQL" width="120" height="90">
+              </a>
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
-          </li>
-          <li class="list-inline-item">
-            <i><img class="img-java img-fluid img-profile mx-auto mb-2" src="img/java_icon2.png" alt="Java"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab"><img class="img-spring img-fluid img-profile mx-auto mb-2" src="img/spring_logo.png" alt="Spring"></i>
-          </li>
-        </ul> -->
-        <div class="row">
+        </ul>
+        <!-- <div class="row">
           <div class="column">
             <img class="img-java" src="img/java_icon2.png" alt="Java">
             <img class="img-spring" src="img/spring_logo.png" alt="Spring">
           </div>
-        </div>
+        </div> -->
 
         <div class="subheading mb-3">Workflow</div>
         <ul class="fa-ul mb-0">
