include new experiences and adjustments

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <span class="text-primary">Felix de Moraes</span>
         </h1>
         <div class="subheading mb-5">Salto, São Paulo, Brasil · (11) 98100-3039 ·
-          <a href="mailto:name@email.com">rafaelfelix1433@gmail.com</a>
+          <a href="mailto:rafaelfelix1433@gmail.com?Subject=Java" target="_top">rafaelfelix1433@gmail.com</a>
         </div>
         <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
         <div class="social-icons">
@@ -94,23 +94,61 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Senior Java Software Analyst</h3>
+            <div class="subheading mb-3">BRQ Digital Solutions</div>
+            <ul class="fa-ul mb-0">
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                Member of the Digital Innovation Hub team for Latin America in a major international automaker, working on technological innovation and digital transformation projects.</li>
+                <br>
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                Backend development, evolution and maintenance of the automotive e-commerce system using the proprietary Java-based Hybris (SAP) platform using Spring (boot, Data, MVC) and JPA / Hibernate with MySQL framework.</li>
+                <br>
+                <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                Git and Gitlab source code control and versioning.</li>
+                <br>
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                Working with agile methodologies to optimize the software construction process, development and evolution.</li>
+                <br>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">July 2019 - December 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0">Java Software Developer</h3>
+            <div class="subheading mb-3">IBM Brasil</div>
+            <ul class="fa-ul mb-0">
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                Acting as the team's technical leader and system team, supporting developers and Scrum Master in meetings, business definitions and system architecture, monitoring the quality of deliveries, team activities and supporting other areas in technical interviews of new candidates for various technical positions.</li>
+                <br>
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                Member of the Global Business Services team, working on digital transformation and Web / Mobile innovation area allocated to national and international companies.</li>
+                <br>
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                Java backend development, evolution and maintenance using Spring framework (boot, Data, MVC) and JPA / Hibernate and MySQL, building jUnit / mockito unit tests using continuous integration within DevOps culture (Jenkins, SonarQube).</li>
+                <br>
+                <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                Git and Gitlab source code control and versioning.</li>
+                <br>
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                Working with agile methodologies to optimize the software construction process, development and evolution.</li>
+                <br>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">May 2018 - June 2019</span>
           </div>
         </div>
 
@@ -231,6 +269,21 @@
               <a href="https://dev.mysql.com/doc/">
                 <img src="img/mysql-logo.png" alt="MySQL" width="120" height="90">
               </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://docs.microsoft.com/en-us/sql/sql-server/?view=sql-server-ver15">
+              <img src="img/sql-logo.png" alt="SQL Server" width="90" height="90">
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://docs.oracle.com/en/database/">
+              <img src="img/oracle-logo.png" alt="Oracle Database" width="120" height="120">
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://www.postgresql.org/docs/">
+              <img src="img/postgre-logo.png" alt="Postgree Database" width="150" height="90">
+            </a>
           </li>
         </ul>
         <!-- <div class="row">
