Final adjustments to deploy

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </nav>
@@ -74,7 +74,7 @@
         <div class="subheading mb-5">Salto, São Paulo, Brasil · (11) 98100-3039 ·
           <a href="mailto:rafaelfelix1433@gmail.com?Subject=Java" target="_top">rafaelfelix1433@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">I am experienced in software development using agile frameworks to optimize from the conception process to product delivery, focusing on code quality and teamwork.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/rafaelfelixmoraes/">
             <i class="fab fa-linkedin-in"></i>
@@ -91,6 +91,34 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Senior Software Engineer</h3>
+            <div class="subheading mb-3">CI&T Software</div>
+            <ul class="fa-ul mb-0">
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                Allocation in the technology and innovation team of a major institution that provides means of payment and benefits, acting in projects of technological evolution and digital transformation on mobile/web fronts.</li>
+                <br>
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                Development and maintenance of Java backend using Springboot and JPA / Hibernate and mySQL, using CI with Docker and Jenkins (with static analysis using SonarQube), and jUnit with mockito to build unit tests.</li>
+                <br>
+                <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                Git and Gitlab source code control and versioning.</li>
+                <br>
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                Working with agile methodologies to optimize the software construction process, development and evolution.</li>
+                <br>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">December 2019 - Until Now</span>
+          </div>
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
@@ -152,28 +180,6 @@
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
-          </div>
-        </div>
-
       </div>
 
     </section>
@@ -186,17 +192,15 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">Centro Universitário Nossa Senhora do Patrocínio</h3>
+            <div class="subheading mb-3">Bachelor of Computer Science</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">January 2007 - May 2016</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">James Buchanan High School</h3>
             <div class="subheading mb-3">Technology Magnet Program</div>
@@ -205,7 +209,7 @@
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2002 - May 2006</span>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </section>
@@ -301,6 +305,9 @@
           <li>
             <i class="fa-li fa fa-check"></i>
             Cross Browser Testing &amp; Debugging</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Sense of Teamwork</li>
           <li>
             <i class="fa-li fa fa-check"></i>
             Cross Functional Teams</li>
@@ -316,12 +323,12 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p>Apart from being a developer, I enjoy most of my time being outdoors, with my family (my dogs and wife) and, why not, walking alone and listening a good music.</p>
+        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, and I spend my free time between exploring the latest technology advancements in the development world and play video games.</p>
       </div>
     </section>
 
-    <hr class="m-0">
+    <!-- <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
@@ -355,7 +362,7 @@
             Place - James Buchanan High School - Hackathon 2005</li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
   </div>
 
