actual role adjustments

--- a/index.html
+++ b/index.html
@@ -94,24 +94,33 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Software Engineer</h3>
+            <h3 class="mb-0">Senior Software Engineer | Tech Lead</h3>
             <div class="subheading mb-3">CI&T Software</div>
             <ul class="fa-ul mb-0">
               <li>
                 <i class="fa-li fa fa-laptop-code"></i>
-                Allocation in the technology and innovation team of a major institution that provides means of payment and benefits, acting in projects of technological evolution and digital transformation on mobile/web fronts.</li>
+                Allocation in the technology and innovation team of a major institution that provides means of payment and benefits, acting in projects of technological evolution and digital transformation on mobile/web fronts.
+              </li>
                 <br>
               <li>
                 <i class="fa-li fa fa-laptop-code"></i>
-                Development and maintenance of Java backend using Springboot and JPA / Hibernate and mySQL, using CI with Docker and Jenkins (with static analysis using SonarQube), and jUnit with mockito to build unit tests.</li>
-                <br>
-                <li>
-                <i class="fa-li fa fa-laptop-code"></i>
-                Git and Gitlab source code control and versioning.</li>
+                Exercising a technical leadership role, providing support to the team, and also being the focal point for technical matters with the client.
+              </li>
                 <br>
               <li>
                 <i class="fa-li fa fa-laptop-code"></i>
-                Working with agile methodologies to optimize the software construction process, development and evolution.</li>
+                Development and maintenance of Java backend using Springboot and JPA / Hibernate and mySQL, using CI with Docker and Jenkins (with static analysis using SonarQube), and jUnit with mockito to build unit tests.
+              </li>
+                <br>
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                Git and Gitlab source code control and versioning.
+              </li>
+                <br>
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                Working with agile methodologies to optimize the software construction process, development and evolution.
+              </li>
                 <br>
             </ul>
           </div>
@@ -242,7 +251,7 @@
           </li>
         </ul>
         <ul class="list-inline dev-icons">
-            <h5>Back End</h5>
+          <h5>Back End</h5>
           <li class="list-inline-item">
             <a href="https://docs.oracle.com/en/java/"><i class="fab fa-java"></i></a>
           </li>
@@ -265,6 +274,19 @@
               <a href="https://swagger.io/docs/">
                 <img src="img/Swagger-logo.png" alt="Swagger" width="60" height="60">
               </a>
+          </li>
+        </ul>
+        <ul class="list-inline dev-icons">
+          <h5>DevOps</h5>
+          <li class="list-inline-item">
+            <a href="https://www.terraform.io/">
+              <img src="img/terraform-logo.png" alt="terraform" width="165" height="75">
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://docs.gitlab.com/ee/ci/">
+              <img src="img/gitlab-logo.png" alt="terraform" width="165" height="65">
+            </a>
           </li>
         </ul>
         <ul class="list-inline dev-icons">
@@ -301,13 +323,16 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
+            Continuous Delivery / Continuous Integration</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Sense of Teamwork</li>
+            Architectural vision</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Backend RestAPIs eyesight</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Sense of Teamwork</li>
           <li>
             <i class="fa-li fa fa-check"></i>
             Cross Functional Teams</li>
