Change work description

--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
                 <br>
               <li>
                 <i class="fa-li fa fa-laptop-code"></i>
-                Exercising a technical leadership role, providing support to the team, and also being the focal point for technical matters with the client.
+                Exercising a technical leadership role, providing support to the team (technically and about career and professional development), and also being the focal point for technical matters with the client.
               </li>
                 <br>
               <li>
                 <i class="fa-li fa fa-laptop-code"></i>
-                Development and maintenance of Java backend using Springboot and JPA / Hibernate and mySQL, using CI with Docker and Jenkins (with static analysis using SonarQube), and jUnit with mockito to build unit tests.
+                Development and maintenance of Java backend using Springboot and JPA / Hibernate and mySQL / DynamobDB, using CI with Docker and Jenkins / GitlabCI (with static analysis using SonarQube), and jUnit with mockito to build unit tests.
               </li>
                 <br>
               <li>
