Including Cassandra on Skills

--- a/index.html
+++ b/index.html
@@ -311,6 +311,11 @@
               <img src="img/postgre-logo.png" alt="Postgree Database" width="150" height="90">
             </a>
           </li>
+          <li class="list-inline-item">
+            <a href="https://cassandra.apache.org/doc/latest/">
+              <img src="img/cassandra-logo.png" alt="Postgree Database" width="180" height="45">
+            </a>
+          </li>
         </ul>
         <!-- <div class="row">
           <div class="column">
