--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="subheading mb-5">Salto, São Paulo, Brasil · (11) 98100-3039 ·
           <a href="mailto:rafaelfelix1433@gmail.com?Subject=Java" target="_top">rafaelfelix1433@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in software development using agile frameworks to optimize from the conception process to product delivery, focusing on code quality and teamwork.</p>
+        <p class="lead mb-5">I have experience in design solutions and software development for the cloud, using agile frameworks to optimize from the conception process to product delivery, focusing on escalebility, code quality and teamwork.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/rafaelfelixmoraes/">
             <i class="fab fa-linkedin-in"></i>
@@ -99,12 +99,17 @@
             <ul class="fa-ul mb-0">
               <li>
                 <i class="fa-li fa fa-laptop-code"></i>
-                Allocation in the technology and innovation team of a major institution that provides means of payment and benefits, acting in projects of technological evolution and digital transformation on mobile/web fronts.
+                Allocation in the technology and innovation team of a major institutions that provides means of payment and benefits, acting in projects of technological evolution and digital transformation on mobile/web fronts.
               </li>
                 <br>
               <li>
                 <i class="fa-li fa fa-laptop-code"></i>
-                Exercising a technical leadership role, providing support to the team (technically and about career and professional development), and also being the focal point for technical matters with the client.
+                Designing cloud based solutions for AWS integration (Database / Messaging / Storage)
+              </li>
+                <br>
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                Exercising a technical leadership role, providing support to the multidisciplinary team (technically and about career and professional development), and also being the focal point for technical matters with the client.
               </li>
                 <br>
               <li>
@@ -277,7 +282,12 @@
           </li>
         </ul>
         <ul class="list-inline dev-icons">
-          <h5>DevOps</h5>
+          <h5>Cloud / DevOps</h5>
+          <li class="list-inline-item">
+            <a href="https://docs.aws.amazon.com/">
+              <img src="img/aws_logo.png" alt="aws" width="80" height="50">
+            </a>
+          </li>
           <li class="list-inline-item">
             <a href="https://www.terraform.io/">
               <img src="img/terraform-logo.png" alt="terraform" width="165" height="75">
@@ -312,8 +322,8 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://cassandra.apache.org/doc/latest/">
-              <img src="img/cassandra-logo.png" alt="Postgree Database" width="180" height="45">
+            <a href="https://www.mongodb.com/docs/">
+              <img src="img/mongodb-logo.png" alt="Postgree Database" width="95" height="90">
             </a>
           </li>
         </ul>
