Update CV info with new work and education

--- a/index.html
+++ b/index.html
@@ -94,6 +94,34 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">Software Engineering Specialist</h3>
+            <div class="subheading mb-3">Dock</div>
+            <ul class="fa-ul mb-0">
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                Allocation in the technology engineering and innovation team for South America</li>
+                <br>
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                Backend development, evolution, design and maintenance of account and credit product using Java / Spring (boot, Data, MVC) platform and JPA / Hibernate with SQL Server framework.</li>
+                <br>
+                <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                Git and Gitlab/Github source code control and versioning.</li>
+                <br>
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                Working with agile methodologies to optimize the software construction process, development and evolution.</li>
+                <br>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2022 - Until Now</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Senior Software Engineer | Tech Lead</h3>
             <div class="subheading mb-3">CI&T Software</div>
             <ul class="fa-ul mb-0">
@@ -130,7 +158,7 @@
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2019 - Until Now</span>
+            <span class="text-primary">December 2019 - June 2022</span>
           </div>
         </div>
 
@@ -211,6 +239,16 @@
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">January 2007 - May 2016</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">IGTI - Instituto de Gestão e Tecnologia da Informação</h3>
+            <div class="subheading mb-3">Bootcamp Arquiteto de Soluções</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2022 - September 2022</span>
           </div>
         </div>
 
