Update IGTI new name

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">IGTI - Instituto de Gestão e Tecnologia da Informação</h3>
+            <h3 class="mb-0">XP Educação</h3>
             <div class="subheading mb-3">Bootcamp Arquiteto de Soluções</div>
           </div>
           <div class="resume-date text-md-right">
