--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#about">About</a>
+          <a class="nav-link js-scroll-trigger" href="#about">About Me</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
@@ -74,7 +74,7 @@
         <div class="subheading mb-5">Salto, São Paulo, Brasil · (11) 98100-3039 ·
           <a href="mailto:rafaelfelix1433@gmail.com?Subject=Java" target="_top">rafaelfelix1433@gmail.com</a>
         </div>
-        <p class="lead mb-5">I have experience in design solutions and software development for the cloud, using agile frameworks to optimize from the conception process to product delivery, focusing on escalebility, code quality and teamwork.</p>
+        <p class="lead mb-5">I have experience in design solutions and software development for the cloud, using development best pratices and agile frameworks to optimize from the conception process to product delivery, focusing on escalebility, code quality and teamwork.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/rafaelfelixmoraes/">
             <i class="fab fa-linkedin-in"></i>
@@ -99,7 +99,7 @@
             <ul class="fa-ul mb-0">
               <li>
                 <i class="fa-li fa fa-laptop-code"></i>
-                Allocation in the technology engineering and innovation team for South America</li>
+                Allocation in the technology engineering and innovation team of Credit Products for LATAM</li>
                 <br>
               <li>
                 <i class="fa-li fa fa-laptop-code"></i>
@@ -252,6 +252,16 @@
           </div>
         </div>
 
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">XP Educação</h3>
+            <div class="subheading mb-3">Bootcamp Arquiteto de Software</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 2022 - November 2022</span>
+          </div>
+        </div>
+
         <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">James Buchanan High School</h3>
@@ -376,6 +386,9 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
+            Maintainability, clean code and development best pratices</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
             Continuous Delivery / Continuous Integration</li>
           <li>
             <i class="fa-li fa fa-check"></i>
@@ -401,8 +414,9 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a developer, I enjoy most of my time being outdoors, with my family (my dogs and wife) and, why not, walking alone and listening a good music.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, and I spend my free time between exploring the latest technology advancements in the development world and play video games.</p>
+        <p><b>Hashtags: #awscloud, #innnovation, #agileculture, #javaarchitect, #javadevelopment</b></p>
+        <p>Apart from being a developer, I enjoy to spend most of my time with my family (my dogs and wife) and, sometimes, walking alone listening a good music.</p>
+        <p class="mb-0">Also I appreciate a lot of sci-fi, investigation and fantasy genre movies and television shows, and I spend the rest of my free time between exploring and reading about the latest technology advancements and news in the development world and play video games.</p>
       </div>
     </section>
 
