--- a/index.html
+++ b/index.html
@@ -244,8 +244,18 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">FIAP</h3>
+            <div class="subheading mb-3">Post Graduation in Software Architecture</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2023 - June 2024</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">XP Educação</h3>
-            <div class="subheading mb-3">Bootcamp Arquiteto de Soluções</div>
+            <div class="subheading mb-3">Solutions Architecture Bootcamp</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">June 2022 - September 2022</span>
@@ -255,7 +265,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">XP Educação</h3>
-            <div class="subheading mb-3">Bootcamp Arquiteto de Software</div>
+            <div class="subheading mb-3">Software Architecture Bootcamp</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">September 2022 - November 2022</span>
