Including Docker logo and update  details

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
-        <!-- <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-        </li> -->
+        </li>
       </ul>
     </div>
   </nav>
@@ -74,7 +74,7 @@
         <div class="subheading mb-5">Salto, São Paulo, Brasil · (11) 98100-3039 ·
           <a href="mailto:rafaelfelix1433@gmail.com?Subject=Java" target="_top">rafaelfelix1433@gmail.com</a>
         </div>
-        <p class="lead mb-5">I have experience in design solutions and software development for the cloud, using development best pratices and agile frameworks to optimize from the conception process to product delivery, focusing on escalebility, code quality and teamwork.</p>
+        <p class="lead mb-5">I have experience in create and design solutions and software development for the cloud, using development best pratices and agile frameworks to optimize from the conception process to product delivery, focusing on escalebility, code quality and teamwork.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/rafaelfelixmoraes/">
             <i class="fab fa-linkedin-in"></i>
@@ -103,15 +103,19 @@
                 <br>
               <li>
                 <i class="fa-li fa fa-laptop-code"></i>
-                Backend development, evolution, design and maintenance of account and credit product using Java / Spring (boot, Data, MVC) platform and JPA / Hibernate with SQL Server framework.</li>
+                Backend development, evolution, design and maintenance of account and credit products using Java / Spring (boot, Data, MVC) platform and JPA / Hibernate with SQL Server framework based on Monolithic and Hexagonal architecture</li>
                 <br>
-                <li>
+              <li>
                 <i class="fa-li fa fa-laptop-code"></i>
                 Git and Gitlab/Github source code control and versioning.</li>
                 <br>
               <li>
                 <i class="fa-li fa fa-laptop-code"></i>
                 Working with agile methodologies to optimize the software construction process, development and evolution.</li>
+                <br>
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                Exercising a technical leadership role, providing support to the multidisciplinary team (technically and about career and professional development), and also being the focal point for technical matters with the tribe.</li>
                 <br>
             </ul>
           </div>
@@ -356,6 +360,11 @@
               <img src="img/gitlab-logo.png" alt="terraform" width="165" height="65">
             </a>
           </li>
+          <li class="list-inline-item">
+            <a href="https://docs.docker.com/">
+              <img src="img/docker_logo.png" alt="Swagger" width="100" height="85">
+            </a>
+        </li>
         </ul>
         <ul class="list-inline dev-icons">
           <h5>Databases</h5>
@@ -430,7 +439,7 @@
       </div>
     </section>
 
-    <!-- <hr class="m-0">
+    <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
@@ -438,8 +447,8 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
-          <li>
+            ETS/TOEIC Proficiency Level - B2</li>
+          <!--<li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             Mobile Web Specialist - Google Certification</li>
           <li>
@@ -461,10 +470,10 @@
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
+            Place - James Buchanan High School - Hackathon 2005</li> -->
         </ul>
       </div>
-    </section> -->
+    </section>
 
   </div>
 
